Making the website responsive 1

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -47,6 +47,7 @@
         background-color: transparent;
         border-radius: 25px;
         text-decoration: none;
+        margin-left: 10px;
 
         &:hover {
             color: var(--bs-header-text);
