--- a/scss/style.scss
+++ b/scss/style.scss
@@ -831,3 +831,151 @@ body {
         }
     }
 }
+
+/****************** MEDIA QUERIES ******************/
+
+@media (max-width: 1199.98px) {
+    .header .image-container {
+        width: 55%;
+    }
+
+    .primary-block-component .row {
+        .primary-block-text-container h2 {
+            font-size: 32px;
+        }
+
+        .primary-block-video {
+            .introduction-video{
+                width: 100%;
+                height: 258px;
+    
+                iframe {
+                    height: 245px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 991.98px) {
+    .header .image-container {
+        width: 35%;
+    }
+
+    .primary-block-component {
+        padding: 125px 12px 125px 12px;
+
+        .row {
+            justify-content: center;
+    
+            .primary-block-text-container {
+                width: 100%;
+                margin-bottom: 40px;
+            }
+    
+            .primary-block-video {
+                width: 100%;
+    
+                .introduction-video{
+                    width: 82%;
+                    height: 327px;
+        
+                    iframe {
+                        height: 315px;
+                    }
+                }
+            }
+        }
+
+    }
+}
+
+@media (max-width: 767.98px) {
+    .header .image-container {
+        width: 40%;
+    }
+
+    .primary-block-component .row {
+        .primary-block-text-container h2 {
+            font-size: 34px;
+        }
+
+        .primary-block-video {
+            .introduction-video{
+                width: 100%;
+                height: 278px;
+
+                iframe {
+                    height: 265px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .header .image-container {
+        width: 50%;
+    }
+
+    .primary-block-component .row {
+        .primary-block-text-container h2 {
+            font-size: 27px;
+        }
+
+        .primary-block-text-container p {
+            width: 100%;
+        }
+
+        .primary-block-video {
+            .introduction-video{
+                width: 100%;
+                height: 218px;
+
+                iframe {
+                    height: 205px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    .header .image-container {
+        width: 70%;
+    }
+
+    .primary-block-component .row {
+        .primary-block-text-container h2 {
+            width: 100%;
+        }
+
+        .primary-block-video {
+            .introduction-video{
+                width: 100%;
+                height: 185px;
+
+                iframe {
+                    height: 172px;
+                    width: 560px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 380px) {
+    .primary-block-component .row {
+
+        .primary-block-video {
+            .introduction-video{
+                border: none;
+
+                iframe {
+                    width: 270px;
+                    height: 152px;
+                }
+            }
+        }
+    }
+}
