--- a/style.css
+++ b/style.css
@@ -11740,6 +11740,7 @@ p {
   background-color: transparent;
   border-radius: 25px;
   text-decoration: none;
+  margin-left: 10px;
 }
 .btn-primary:hover {
   color: var(--bs-header-text);
@@ -12382,4 +12383,104 @@ body {
      object-fit: cover;
   height: 50%;
   width: 50%;
+}
+
+/****************** MEDIA QUERIES ******************/
+@media (max-width: 1199.98px) {
+  .header .image-container {
+    width: 55%;
+  }
+  .primary-block-component .row .primary-block-text-container h2, .primary-block-component .row .primary-block-text-container .h2 {
+    font-size: 32px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video {
+    width: 100%;
+    height: 258px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video iframe {
+    height: 245px;
+  }
+}
+@media (max-width: 991.98px) {
+  .header .image-container {
+    width: 35%;
+  }
+  .primary-block-component {
+    padding: 125px 12px 125px 12px;
+  }
+  .primary-block-component .row {
+    justify-content: center;
+  }
+  .primary-block-component .row .primary-block-text-container {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+  .primary-block-component .row .primary-block-video {
+    width: 100%;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video {
+    width: 82%;
+    height: 327px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video iframe {
+    height: 315px;
+  }
+}
+@media (max-width: 767.98px) {
+  .header .image-container {
+    width: 40%;
+  }
+  .primary-block-component .row .primary-block-text-container h2, .primary-block-component .row .primary-block-text-container .h2 {
+    font-size: 34px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video {
+    width: 100%;
+    height: 278px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video iframe {
+    height: 265px;
+  }
+}
+@media (max-width: 550px) {
+  .header .image-container {
+    width: 50%;
+  }
+  .primary-block-component .row .primary-block-text-container h2, .primary-block-component .row .primary-block-text-container .h2 {
+    font-size: 27px;
+  }
+  .primary-block-component .row .primary-block-text-container p {
+    width: 100%;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video {
+    width: 100%;
+    height: 218px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video iframe {
+    height: 205px;
+  }
+}
+@media (max-width: 450px) {
+  .header .image-container {
+    width: 70%;
+  }
+  .primary-block-component .row .primary-block-text-container h2, .primary-block-component .row .primary-block-text-container .h2 {
+    width: 100%;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video {
+    width: 100%;
+    height: 185px;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video iframe {
+    height: 172px;
+    width: 560px;
+  }
+}
+@media (max-width: 380px) {
+  .primary-block-component .row .primary-block-video .introduction-video {
+    border: none;
+  }
+  .primary-block-component .row .primary-block-video .introduction-video iframe {
+    width: 270px;
+    height: 152px;
+  }
 }
