--- a/style.css
+++ b/style.css
@@ -12071,8 +12071,8 @@ body {
   justify-content: center;
 }
 .choose-ability-component .filter-row .filters a .filter-container .filter-btn img {
-  height: 65%;
-  width: 65%;
+  height: auto;
+  width: 75%;
 }
 .choose-ability-component .filter-row .filters a .filter-container .filter-name {
   width: 100%;
@@ -12400,6 +12400,12 @@ body {
   .primary-block-component .row .primary-block-video .introduction-video iframe {
     height: 245px;
   }
+  .choose-ability-component .choose-ability-container {
+    width: 75%;
+  }
+  .choose-ability-component .choose-ability-container .choose-ability-text-container {
+    width: 100%;
+  }
 }
 @media (max-width: 991.98px) {
   .header .image-container {
@@ -12425,6 +12431,9 @@ body {
   .primary-block-component .row .primary-block-video .introduction-video iframe {
     height: 315px;
   }
+  .choose-ability-component .filter-row .filters a .filter-container .filter-btn img {
+    width: 65%;
+  }
 }
 @media (max-width: 767.98px) {
   .header .image-container {
@@ -12440,10 +12449,22 @@ body {
   .primary-block-component .row .primary-block-video .introduction-video iframe {
     height: 265px;
   }
+  .choose-ability-component .choose-ability-container {
+    width: 90%;
+  }
+  .choose-ability-component .choose-ability-text-container h1, .choose-ability-component .choose-ability-text-container .h1 {
+    font-size: 42px;
+  }
+  .choose-ability-component .filter-row .filters a .filter-container .filter-name .filter-name-text {
+    font-size: 22px;
+  }
+  .choose-ability-component .filter-row .filters a .filter-container .filter-btn img {
+    width: 60%;
+  }
 }
 @media (max-width: 550px) {
   .header .image-container {
-    width: 50%;
+    width: 25%;
   }
   .primary-block-component .row .primary-block-text-container h2, .primary-block-component .row .primary-block-text-container .h2 {
     font-size: 27px;
@@ -12461,7 +12482,7 @@ body {
 }
 @media (max-width: 450px) {
   .header .image-container {
-    width: 70%;
+    width: 30%;
   }
   .primary-block-component .row .primary-block-text-container h2, .primary-block-component .row .primary-block-text-container .h2 {
     width: 100%;
@@ -12476,6 +12497,9 @@ body {
   }
 }
 @media (max-width: 380px) {
+  .header .image-container {
+    width: 35%;
+  }
   .primary-block-component .row .primary-block-video .introduction-video {
     border: none;
   }
