Making the website responsive 2

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,7 +274,7 @@ body {
 
 .about-me-block-component {
     background-color: var(--bs-primary-background);
-    padding: 20px 12px 20px 12px;
+    padding: 0 12px 20px 12px;
 
     .about-me-header-row {
         padding: 30px 0;
@@ -340,6 +340,9 @@ body {
     padding: 0 12px 60px 12px;
 
     .news-feed-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
 
         .card {
             background-color: var(--bs-primary-background);
@@ -374,19 +377,30 @@ body {
     padding: 80px 12px 80px 12px;
 
     .choose-ability-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 50%;
+
+        .choose-ability-header-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+
+            h1 {
+                text-align: center;
+                color: var(--bs-header-text);
+                margin-bottom: 15px;
+            }
+        }
     
         .choose-ability-text-container {
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
-    
-            h1 {
-                text-align: center;
-                color: var(--bs-header-text);
-                margin-bottom: 15px;
-            }
+            width: 65%;
     
             p {
                 text-align: center;
@@ -446,6 +460,7 @@ body {
                         margin-top: 10px;
         
                         .filter-name-text {
+                            font-size: 22px;
                             text-align: center;
                             color: var(--bs-header-text);
                             font-weight: bold;
@@ -837,7 +852,7 @@ body {
 
 @media (max-width: 1199.98px) {
     .header .image-container {
-        width: 55%;
+        width: 45%;
     }
 
     .primary-block-component .row {
@@ -857,12 +872,20 @@ body {
         }
     }
 
+    .news-feed-block-component .news-feed-row .card .card-body .card-title {
+        font-size: 26px;
+    }
+
     .choose-ability-component {
         .choose-ability-container {
             width: 75%;
 
-            .choose-ability-text-container {
+            .choose-ability-header-container {
                 width: 100%;
+            }
+
+            .choose-ability-text-container {
+                width: 50%;
             }
         }
     }
@@ -870,7 +893,7 @@ body {
 
 @media (max-width: 991.98px) {
     .header .image-container {
-        width: 35%;
+        width: 25%;
     }
 
     .primary-block-component {
@@ -899,12 +922,48 @@ body {
         }
     }
 
-    .choose-ability-component .filter-row .filters a .filter-container .filter-btn img {
-        width: 65%;
+    .about-me-block-component .about-me-row {
+        .about-me-block-text-container {
+            width: 100%;
+            padding-top: 30px;
+
+            p {
+                width: 100%;
+            }
+        }
+    }
+
+    .header-divider-component .header-divider-container {
+        width: 70%;
+    }
+
+    .choose-ability-component {
+        .choose-ability-container {
+
+            .choose-ability-text-container {
+                width: 65%;
+            }
+        }
+
+        .filter-row .filters .filter a .filter-container .filter-btn img {
+            width: 65%;
+        }
+    }
+
+    .contact-me-component .wpforms-container .wpforms-submit-container .wpforms-submit {
+        width: 15%;
+    }
+
+    .footer .footer-row .social-links .social-container .social {
+        width: 45%;
     }
 }
 
 @media (max-width: 767.98px) {
+    h1 {
+        font-size: 42px;
+    }
+
     .header .image-container {
         width: 40%;
     }
@@ -926,30 +985,81 @@ body {
         }
     }
 
+    .about-me-block-component .about-me-header-row .about-me-header-container {
+        width: 100%;
+    }
+
+    .header-divider-component .header-divider-container {
+        width: 85%;
+    }
+
+    .news-feed-block-component .news-feed-row {
+        justify-content: center;
+    }
+
     .choose-ability-component {
         .choose-ability-container {
             width: 90%;
-        }
 
-        .choose-ability-text-container h1 {
-            font-size: 42px;
-        }
-
-        .filter-row .filters a .filter-container {
-            .filter-name .filter-name-text {
-                font-size: 22px;
-            }
-
-            .filter-btn img {
-                width: 60%;
+            .choose-ability-text-container {
+                width: 75%;
             }
         }
+
+        .filter-row .filters {
+            flex-direction: column;
+            gap: 30px;
+
+            .filter a .filter-container {
+                .filter-name .filter-name-text {
+                    font-size: 22px;
+                }
+    
+                .filter-btn img {
+                    width: 60%;
+                }
+            }
+        }
+    }
+
+    .contact-me-component .contact-me {
+        flex-direction: column;
+    }
+
+    .contact-me-component {
+        .contact-me-header-container {
+            width: 100%;
+        }
+
+        .contact-me-container {
+            padding: 0 28px;
+        }
+
+        .contact-me .contacts #email {
+            margin-right: 0;
+        }
+
+        .contact-me .contacts #message {
+            margin-left: 0;
+        }
+
+        .wpforms-container .wpforms-submit-container .wpforms-submit {
+            width: 20%;
+        }
+    }
+
+    .footer .footer-row .social-links .social-container .social {
+        width: 60%;
     }
 }
 
 @media (max-width: 550px) {
+    h1 {
+        font-size: 38px;
+    }
+
     .header .image-container {
-        width: 25%;
+        width: 45%;
     }
 
     .primary-block-component .row {
@@ -972,11 +1082,61 @@ body {
             }
         }
     }
+
+    .header-divider-component .header-divider-container {
+        width: 75%;
+    }
+
+    .choose-ability-component {
+        .choose-ability-container {
+            .choose-ability-text-container {
+                width: 90%;
+            }
+        }
+
+        .filter-row .filters .filter a .filter-container {
+            .filter-name .filter-name-text {
+                font-size: 20px;
+            }
+        }
+    }
+
+    .contact-me-component {
+        .contact-me .contacts .contacts-container {
+            .email-box img {
+                width: 12%;
+            }
+
+            .message-box img {
+                width: 12%;
+            }
+        }
+
+        .wpforms-container {
+            .wpforms-field {
+                input {
+                    font-size: 18px;
+                }
+    
+                textarea {
+                    font-size: 18px;
+                }
+            }
+    
+            .wpforms-submit-container .wpforms-submit {
+                width: 25%;
+            }
+        }
+    }
+
+    .footer .footer-row .social-links .social-container .social {
+        width: 75%;
+    }
 }
 
 @media (max-width: 450px) {
     .header .image-container {
-        width: 30%;
+        width: 55%;
     }
 
     .primary-block-component .row {
@@ -996,11 +1156,37 @@ body {
             }
         }
     }
+
+    .news-feed-block-component .news-feed-row .card .card-body .card-title {
+        font-size: 23px;
+    }
+
+    .contact-me-component {
+        .contact-me .contacts .contacts-container {
+            .email-box img {
+                width: 15%;
+            }
+
+            .message-box img {
+                width: 15%;
+            }
+        }
+
+        .wpforms-container {
+            .wpforms-submit-container .wpforms-submit {
+                width: 35%;
+            }
+        }
+    }
+
+    .footer .footer-row .social-links .social-container .social {
+        width: 85%;
+    }
 }
 
 @media (max-width: 380px) {
     .header .image-container {
-        width: 35%;
+        width: 55%;
     }
 
     .primary-block-component .row {
@@ -1015,5 +1201,49 @@ body {
                 }
             }
         }
+    }
+
+    .contact-me-component {
+        .contact-me .contacts .contacts-container {
+            .email-box {
+                img {
+                    width: 17%;
+                }
+
+                .contacts-text {
+                    font-size: 18px;
+                }
+            }
+
+            .message-box {
+                img {
+                    width: 17%;
+                }
+                
+                .contacts-text {
+                    font-size: 18px;
+                }
+            }
+        }
+
+        .wpforms-container {
+            .wpforms-field {
+                input {
+                    font-size: 16px;
+                }
+    
+                textarea {
+                    font-size: 16px;
+                }
+            }
+    
+            .wpforms-submit-container .wpforms-submit {
+                width: 40%;
+            }
+        }
+    }
+
+    .footer .footer-row .social-links .social-container .social {
+        width: 100%;
     }
 }
